Fixed background not being visible

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   padding: 6rem;
   width: 100%;
   min-height: 100vh;
+  z-index: 1;
 }
 
 .title {
